--- a/src/detail.ejs
+++ b/src/detail.ejs
@@ -1,80 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>Detailed Data - 766 Scouting</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
-    <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-startup-image" href="public/launch.png">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Scouting">
-    <link rel="manifest" href="/app.webmanifest" />
-    <link rel="stylesheet" href="css/float.min.css" type="text/css">
-    <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
-    <meta name="mobile-web-app-capable" content="yes">
-    <script src="js/form.min.js"></script>
-</head>
-
-<body class="dark-mode">
-    <script>
-        themeHandle()
-    </script>
-    <div class="container" id="search" style="display: <%= displaySearch %>;">
-        <!--flex is shown-->
-        <form>
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
-            <h4 style="color: red; display: <%= errorDisplay %>">
-                <%= errorMessage %>
-            </h4>
-            <h4>Match Data</h4><br>
-            <fieldset>
-                <label>Target Team Number: <br></label>
-                <input type="tel" name="team" required><br>
-                <input type="hidden" name="page" value="0">
-                <br>
+    <head>
+        <title>Detailed Data - 766 Scouting</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
+        <meta charset="UTF-8">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="apple-touch-startup-image" href="public/launch.png">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="Scouting">
+        <link rel="manifest" href="/app.webmanifest" />
+        <link rel="stylesheet" href="css/float.min.css" type="text/css">
+        <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
+        <meta name="mobile-web-app-capable" content="yes">
+        <script src="js/form.min.js"></script>
+    </head>
+    <body class="dark-mode">
+        <script>
+            themeHandle()
+        </script>
+        <div class="container" id="search" style="display: <%= displaySearch %>;">
+            <!--flex is shown-->
+            <form>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h4 style="color: red; display: <%= errorDisplay %>">
+                    <%= errorMessage %>
+                </h4>
+                <h4>Match Data</h4><br>
                 <fieldset>
-                    <label>Event Code: </label><br>
-                    <select name="event">
-                    <option value="CADA">CADA - Sacramento Regional</option>
-                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
-                    <option value="WOOD" selected>WOOD - CalGames</option>
-                </select>
+                    <label>Target Team Number: <br></label>
+                    <input type="tel" name="team" required><br>
+                    <input type="hidden" name="page" value="0">
+                    <br>
+                    <fieldset>
+                        <label>Event Code: </label><br>
+                        <select name="event">
+                        <option value="CADA">CADA - Sacramento Regional</option>
+                        <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                        <option value="WOOD">WOOD - CalGames</option>
+                        <option value="CCCC" selected>CCCC - Capital City Classic</option>
+                    </select>
+                    </fieldset>
+                    <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;">Search</button><br>
+                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
                 </fieldset>
-                <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;">Search</button><br>
-                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
-            </fieldset>
-            <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: #68C3E2;">here</a></small>
-        </form>
-        <br><br>
-    </div>
-    <div class="container" id="results" style="display: <%= displayResults %>;">
-        <!--flex is shown-->
-        <div class="dummy">
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
-            <h4>Match Data</h4><br>
-            <fieldset>
-                <fieldset>
-                    <h3>Team Number:
-                        <%= resultsTeamNumber %>
-                    </h3>
-                    <h5>Match Number:
-                        <%= resultsMatchNumber %> | Event:
-                            <%= resultsEventCode %>
-                    </h5>
-                    <h5 style="text-align: left">
-                        <%- resultsBody %>
-                    </h5>
-                </fieldset>
-                <!--buttons-->
-                <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" onclick='pageControl("bck")'>Previous</button>&emsp;<button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" onclick='pageControl("fwd")'>Next</button><br>
-                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="removeURLParams()">New Search</button>&emsp;<button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
-            </fieldset>
+                <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: #68C3E2;">here</a></small>
+            </form>
             <br><br>
-            <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: #68C3E2;">here</a></small>
         </div>
-    </div>
-    <script src="js/detail_client.min.js" type="text/javascript"></script>
-</body>
-
+        <div class="container" id="results" style="display: <%= displayResults %>;">
+            <!--flex is shown-->
+            <div class="dummy">
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h4>Match Data</h4><br>
+                <fieldset>
+                    <fieldset>
+                        <h3>Team Number:
+                            <%= resultsTeamNumber %>
+                        </h3>
+                        <h5>Match Number:
+                            <%= resultsMatchNumber %> | Event:
+                                <%= resultsEventCode %>
+                        </h5>
+                        <h5 style="text-align: left">
+                            <%- resultsBody %>
+                        </h5>
+                    </fieldset>
+                    <!--buttons-->
+                    <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" onclick='pageControl("bck")'>Previous</button>&emsp;<button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" onclick='pageControl("fwd")'>Next</button><br>
+                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="removeURLParams()">New Search</button>&emsp;<button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                </fieldset>
+                <br><br>
+                <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: #68C3E2;">here</a></small>
+            </div>
+        </div>
+        <script src="js/detail_client.min.js" type="text/javascript"></script>
+    </body>
 </html>
